# WorldBackup

./: .gitignore  README.md  pyproject.toml
src/endstone_world_backup/: __init__.py  config.toml  world_backup_plugin.py
